--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,11 @@
             <artifactId>selenium-htmlunit-driver</artifactId>
             <version>2.44.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
     </dependencies>
 
