--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 #
 #------------------------------------------------------------------------------
 
-log4j.rootCategory=INFO, C, F
+log4j.rootCategory=INFO, C
 
 #------------------------------------------------------------------------------
 #
