work in progress...

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,7 +4,9 @@
 #
 #------------------------------------------------------------------------------
 
-log4j.rootCategory=INFO, C
+log4j.rootCategory=INFO, C, F
+
+log4j.logger.com.gargoylesoftware.htmlunit.DefaultCssErrorHandler=ERROR
 
 #------------------------------------------------------------------------------
 #
