--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ screenshot.format=.png
 #------------------------ Selenium configuration ------------------------------
 selenium.max.timeout=20
 selenium.retry.time=1
-#selenium.chrome.driver.path="C:\\Selenium\\drivers\\chromedriver.exe"
+selenium.chrome.driver.path="C:\\Selenium\\drivers\\chromedriver.exe"
 
